# fever-prediction-platform

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: default.yaml
fever_platform/: __init__.py  config.py
fever_platform/api/: __init__.py  server.py
fever_platform/data/: __init__.py  loader.py  preprocessor.py  splitter.py
fever_platform/evaluation/: benchmarker.py  metrics.py
fever_platform/explain/: __init__.py  shap_explainer.py
fever_platform/models/: __init__.py  attention.py  baseline.py  fusion.py  tuner.py
fever_platform/training/: __init__.py  run_pipeline.py
src/: logging_config.py
src/metrics/: collector.py
src/types/: stubs.py
tests/: test_attention.py  test_integration.py  test_loader.py  test_metrics.py  test_preprocessor.py  test_splitter.py
