[project]
name = "fever-prediction-platform"
version = "1.0.0"
description = "Production fever and malaria prediction platform with LSTM-Attention fusion models"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kaushik Sarkar", email = "dr.kaushiks@hotmail.com"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tensorflow>=2.14",
    "keras-tuner>=1.4",
    "shap>=0.43",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.0",
    "click>=8.1",
    "loguru>=0.7",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "mypy>=1.7", "ruff>=0.1"]
serve = ["fastapi>=0.104", "uvicorn>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
